--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>WebTest</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Task1.1</name>
+	<description>Demo project for Spring Boo</description>
 
 	<properties>
 		<java.version>11</java.version>
